# remcmp

./: Cargo.toml  readme.md
remcmp_client/: Cargo.toml
remcmp_client/src/: config.rs  main.rs  util.rs
remcmp_server/: Cargo.toml
remcmp_server/src/: config.rs  main.rs
remcmp_shared/: Cargo.toml
remcmp_shared/src/: lib.rs
